Straighten out CLI tool handling of CL parameters